Package_Tools/include-C/libxml2/libxml/in_arbeit/fertig/xmlwriter.pp


unit xmlwriter;
interface

{
  Automatically converted by H2Pas 1.0.0 from xmlwriter.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    xmlwriter.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
Pchar  = ^char;
PxmlChar  = ^xmlChar;
PxmlDocPtr  = ^xmlDocPtr;
PxmlTextWriter  = ^xmlTextWriter;
PxmlTextWriterPtr  = ^xmlTextWriterPtr;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{
 * Summary: text writing API for XML
 * Description: text writing API for XML
 *
 * Copy: See Copyright for the status of this software.
 *
 * Author: Alfred Mickautsch <alfred@mickautsch.de>
  }
{$ifndef __XML_XMLWRITER_H__}
{$define __XML_XMLWRITER_H__}
{$include <libxml/xmlversion.h>}
{$ifdef LIBXML_WRITER_ENABLED}
{$include <stdarg.h>}
{$include <libxml/xmlIO.h>}
{$include <libxml/list.h>}
{$include <libxml/xmlstring.h>}
{ C++ extern C conditionnal removed }
type

  PxmlTextWriterPtr = ^TxmlTextWriterPtr;
  TxmlTextWriterPtr = PxmlTextWriter;
{
 * Constructors & Destructor
  }

function xmlNewTextWriter(out:TxmlOutputBufferPtr):TxmlTextWriterPtr;cdecl;external;
(* Const before type ignored *)
function xmlNewTextWriterFilename(uri:Pchar; compression:longint):TxmlTextWriterPtr;cdecl;external;
function xmlNewTextWriterMemory(buf:TxmlBufferPtr; compression:longint):TxmlTextWriterPtr;cdecl;external;
function xmlNewTextWriterPushParser(ctxt:TxmlParserCtxtPtr; compression:longint):TxmlTextWriterPtr;cdecl;external;
function xmlNewTextWriterDoc(doc:PxmlDocPtr; compression:longint):TxmlTextWriterPtr;cdecl;external;
function xmlNewTextWriterTree(doc:TxmlDocPtr; node:TxmlNodePtr; compression:longint):TxmlTextWriterPtr;cdecl;external;
procedure xmlFreeTextWriter(writer:TxmlTextWriterPtr);cdecl;external;
{
 * Functions
  }
{
 * Document
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterStartDocument(writer:TxmlTextWriterPtr; version:Pchar; encoding:Pchar; standalone:Pchar):longint;cdecl;external;
function xmlTextWriterEndDocument(writer:TxmlTextWriterPtr):longint;cdecl;external;
{
 * Comments
  }
function xmlTextWriterStartComment(writer:TxmlTextWriterPtr):longint;cdecl;external;
function xmlTextWriterEndComment(writer:TxmlTextWriterPtr):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteFormatComment(writer:TxmlTextWriterPtr; format:Pchar; args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatComment(writer:TxmlTextWriterPtr; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteVFormatComment(writer:TxmlTextWriterPtr; format:Pchar; argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteComment(writer:TxmlTextWriterPtr; content:PxmlChar):longint;cdecl;external;
{
 * Elements
  }
(* Const before type ignored *)
function xmlTextWriterStartElement(writer:TxmlTextWriterPtr; name:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterStartElementNS(writer:TxmlTextWriterPtr; prefix:PxmlChar; name:PxmlChar; namespaceURI:PxmlChar):longint;cdecl;external;
function xmlTextWriterEndElement(writer:TxmlTextWriterPtr):longint;cdecl;external;
function xmlTextWriterFullEndElement(writer:TxmlTextWriterPtr):longint;cdecl;external;
{
 * Elements conveniency functions
  }
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteFormatElement(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar; args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatElement(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteVFormatElement(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar; argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteElement(writer:TxmlTextWriterPtr; name:PxmlChar; content:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteFormatElementNS(writer:TxmlTextWriterPtr; prefix:PxmlChar; name:PxmlChar; namespaceURI:PxmlChar; format:Pchar; 
           args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatElementNS(writer:TxmlTextWriterPtr; prefix:PxmlChar; name:PxmlChar; namespaceURI:PxmlChar; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteVFormatElementNS(writer:TxmlTextWriterPtr; prefix:PxmlChar; name:PxmlChar; namespaceURI:PxmlChar; format:Pchar; 
           argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteElementNS(writer:TxmlTextWriterPtr; prefix:PxmlChar; name:PxmlChar; namespaceURI:PxmlChar; content:PxmlChar):longint;cdecl;external;
{
 * Text
  }
(* Const before type ignored *)
function xmlTextWriterWriteFormatRaw(writer:TxmlTextWriterPtr; format:Pchar; args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatRaw(writer:TxmlTextWriterPtr; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteVFormatRaw(writer:TxmlTextWriterPtr; format:Pchar; argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteRawLen(writer:TxmlTextWriterPtr; content:PxmlChar; len:longint):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteRaw(writer:TxmlTextWriterPtr; content:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteFormatString(writer:TxmlTextWriterPtr; format:Pchar; args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatString(writer:TxmlTextWriterPtr; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteVFormatString(writer:TxmlTextWriterPtr; format:Pchar; argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteString(writer:TxmlTextWriterPtr; content:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteBase64(writer:TxmlTextWriterPtr; data:Pchar; start:longint; len:longint):longint;cdecl;external;
(* Const before type ignored *)
function xmlTextWriterWriteBinHex(writer:TxmlTextWriterPtr; data:Pchar; start:longint; len:longint):longint;cdecl;external;
{
 * Attributes
  }
(* Const before type ignored *)
function xmlTextWriterStartAttribute(writer:TxmlTextWriterPtr; name:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterStartAttributeNS(writer:TxmlTextWriterPtr; prefix:PxmlChar; name:PxmlChar; namespaceURI:PxmlChar):longint;cdecl;external;
function xmlTextWriterEndAttribute(writer:TxmlTextWriterPtr):longint;cdecl;external;
{
 * Attributes conveniency functions
  }
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteFormatAttribute(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar; args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatAttribute(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteVFormatAttribute(writer:TxmlTextWriterPtr; name:PxmlChar; format:Pchar; argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteAttribute(writer:TxmlTextWriterPtr; name:PxmlChar; content:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteFormatAttributeNS(writer:TxmlTextWriterPtr; prefix:PxmlChar; name:PxmlChar; namespaceURI:PxmlChar; format:Pchar; 
           args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatAttributeNS(writer:TxmlTextWriterPtr; prefix:PxmlChar; name:PxmlChar; namespaceURI:PxmlChar; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteVFormatAttributeNS(writer:TxmlTextWriterPtr; prefix:PxmlChar; name:PxmlChar; namespaceURI:PxmlChar; format:Pchar; 
           argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteAttributeNS(writer:TxmlTextWriterPtr; prefix:PxmlChar; name:PxmlChar; namespaceURI:PxmlChar; content:PxmlChar):longint;cdecl;external;
{
 * PI's
  }
(* Const before type ignored *)
function xmlTextWriterStartPI(writer:TxmlTextWriterPtr; target:PxmlChar):longint;cdecl;external;
function xmlTextWriterEndPI(writer:TxmlTextWriterPtr):longint;cdecl;external;
{
 * PI conveniency functions
  }
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteFormatPI(writer:TxmlTextWriterPtr; target:PxmlChar; format:Pchar; args:array of const):longint;cdecl;external;
function xmlTextWriterWriteFormatPI(writer:TxmlTextWriterPtr; target:PxmlChar; format:Pchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWriteVFormatPI(writer:TxmlTextWriterPtr; target:PxmlChar; format:Pchar; argptr:Tva_list):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlTextWriterWritePI(writer:TxmlTextWriterPtr; target:PxmlChar; content:PxmlChar):longint;cdecl;external;
{*
 * xmlTextWriterWriteProcessingInstruction:
 *
 * This macro maps to xmlTextWriterWritePI
  }
const
  xmlTextWriterWriteProcessingInstruction = xmlTextWriterWritePI;  
{
 * CDATA
  }
